--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <ul>
     <li><a href="test-4.html">Go to Test 4</a></li>
     <li><a href="test-5.html">Go to Test 5</a></li>
+    <li><a href="test-6.html">Go to Test 6</a></li>
   </ul>
 </body>
 </html>
